package doorStates;

//States that the door can be
public class States {
  static String LOCKED = "locked";
  static String UNLOCkED =  "unlocked";
  static String UNCLOKED_SHORTLY = "unlocked_shortly";
  static String PROPPED = "propped";
}
